k8s/services/searxng/manifest.yml
apiVersion: v1
kind: Namespace
metadata:
  name: searxng
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searxng

  labels:
    app: searxng
  annotations:
    keel.sh/policy: all
    keel.sh/pollSchedule: "@every 1h"
    keel.sh/trigger: poll
spec:
  replicas: 1
  selector:
    matchLabels:
      app: searxng
  template:
    metadata:
      labels:
        app: searxng
    spec:
      nodeSelector:
        platform.io/type: main
      containers:
        - name: searxng
          image: ghcr.io/searxng/searxng
          ports:
            - containerPort: 8080
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - SETGID
                - SETUID
                - DAC_OVERRIDE
          volumeMounts:
            - name: settings
              # mountPath: /config
              mountPath: /config
      volumes:
        - name: settings
          configMap:
            name: settings
            items:
              - key: settings.yml
                path: settings.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
  annotations:
    keel.sh/policy: all
    keel.sh/pollSchedule: "@every 1h"
    keel.sh/trigger: poll
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      restartPolicy: Always
      nodeSelector:
        platform.io/type: pi
      containers:
        - name: redis
          image: valkey/valkey:9-alpine
          ports:
            - containerPort: 6379
          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 15
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 15
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: searxng

spec:
  selector:
    app: searxng
  ports:
    - port: 80
      targetPort: 8080
---
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: searxng
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`searxng.rvserver.online`)
      kind: Rule
      services:
        - name: searxng
          port: 80
